--- a/web_shell/agents_generator/exts/protogen/protocol_generator/lib/plugins/morpheus3_1_cookiejar_base/templates/CookieJar.java.erb
+++ b/web_shell/agents_generator/exts/protogen/protocol_generator/lib/plugins/morpheus3_1_cookiejar_base/templates/CookieJar.java.erb
@@ -4,7 +4,7 @@ import com.mdi.tools.std.BuffRef;
 
 public class CookieJar {
 
-  public static final int PROTOCOL_VERSION = <%= Env['protocol_version'] %>;
+  public static final String PROTOCOL_VERSION = <%= Env['protocol_version'] %>;
   public static final String PG_VERSION = "<%= ::ProtocolGenerator.version %>";
 
   public static class StoredCookie {
