--- a/web_shell/agents_generator/exts/protogen/protocol_generator/lib/plugins/mdi_ruby_sdk_vm/templates/main.rb.erb
+++ b/web_shell/agents_generator/exts/protogen/protocol_generator/lib/plugins/mdi_ruby_sdk_vm/templates/main.rb.erb
@@ -15,6 +15,8 @@ module ProtogenAPIs
   #   message object.
   # @return [String] Encoded protogen object
   def self.encode(message)
+    Protogen::Splitter.init($<%= Env['agent_name'] %>_initial.redis_internal)
+    Protogen::CookiePasswdMgr.init($<%= Env['agent_name'] %>_initial.redis_internal)
     cookies = message.meta['protogen_cookies'] || []
     Protogen::Codec.encode(message.content, cookies, message.asset)
   end
@@ -26,15 +28,21 @@ module ProtogenAPIs
   #   correspond to any protogen message
   # @return [Protogen::Message::MessageClass, Protogen::Cookies]
   def self.decode(message)
+    Protogen::Splitter.init($<%= Env['agent_name'] %>_initial.redis_internal)
+    Protogen::CookiePasswdMgr.init($<%= Env['agent_name'] %>_initial.redis_internal)
     Protogen::Codec.decode(message.content, message.asset)
   end
 
   # Check the message protogen type, and call the defined callback accordingly.
   # @param [CCS::Message] message message.content must be a protogen message object.
   def self.process(message_class_owner, message)
+    Protogen::Splitter.init($<%= Env['agent_name'] %>_initial.redis_internal)
+    Protogen::CookiePasswdMgr.init($<%= Env['agent_name'] %>_initial.redis_internal)
     case message.content<% Env['msg_seq_dev'].each do |msg,seq| %>
     when Protogen::Messages::<%= msg %> # <%= seq %> sequence
       message_class_owner.<%= "#{Env['sequences'][seq]['callback'] || seq}(message)" %><% end %>
+    when Protogen::MessagePartNotice
+      CC.logger.info("Message part received")
     end
   end
 
