--- a/web_shell/agents_generator/exts/protogen/protocol_generator/lib/plugins/ruby_messages_msgpack/templates/messages.rb.erb
+++ b/web_shell/agents_generator/exts/protogen/protocol_generator/lib/plugins/ruby_messages_msgpack/templates/messages.rb.erb
@@ -2,11 +2,13 @@
 require 'json'
 
 # This module namespaces all classes and modules used by protogen.
+# @api private
 module Protogen
 
 # This module contains all the protogen defined messages
 # @protogen_version <%= ::ProtocolGenerator.version %>
 # @protocol_version <%= Env['protocol_version'] %>
+# @api private
 module Messages
 
   # Hardcoded protocol version
@@ -25,17 +27,18 @@ module Messages
 <% Env['declared_types'].each do |type| %>
 
   # <%= Env['messages'][type]['_description'] || "Protogen message object"%>
+  # @api public
   class <%= type %>
-
     <% Env['fields'][type].each do |field|
     field_desc = Env['messages'][type][field]
     is_array = field_desc['array']
     doctype = MSGPACK2RUBY[field_desc['type']] || field_desc['type']
     doctype = "Array<" + doctype + ">" if is_array %>
     # @!attribute [rw] <%= field %>
-    #  @return [<%= doctype %>] <%= field_desc['docstring'] %><% end %>
-
-    attr_accessor <%= Env['fields'][type].map{|f| ":#{f}"}.join(',') %>
+    # @return [<%= doctype %>] <%= field_desc['docstring'] %>
+    # @api public
+    attr_accessor :<%= field %>
+    <% end %>
 
     def initialize<% Env['fields'][type].each do |field| %>
       @<%= field %> = <%= ( Env['messages'][type][field]['array'] ? '[]' : 'nil' ) %><% end %>
@@ -99,7 +102,7 @@ end
 module Cookies
 
   <% Env['cookie_names'].each do |cookie_name| %>
-
+  # @api public
   class <%= cookie_name %>
 
     attr_accessor <%= Env['fields'][cookie_name].map{|f| ":#{f}"}.join(',') %>
