--- a/web_shell/local_cloud/Gemfile.master
+++ b/web_shell/local_cloud/Gemfile.master
@@ -1,15 +1,30 @@
 source 'http://rubygems.org'
 
-gem 'sinatra', '1.4.2'
-gem 'json', '1.8.0'
-gem 'thread', '0.0.8'
-gem 'logger', '1.2.8'
-gem 'hashie', '2.0.5'
-gem 'thin', '1.5.1'
-gem 'redis', '3.0.4'
-gem 'redis-namespace', '1.3.0'
-gem 'redis-lock', '0.1.0' # needed for protogen
-gem 'msgpack', '0.4.7 ' # needed for protogen
-gem 'activesupport','3.2.12', :require => "active_support/all"
-gem 'i18n', '0.6.4'
-gem 'whenever', '0.8.2', :require => false
+### fake-cloud ###################################################
+
+gem 'sinatra', '~> 1.4.2'
+gem 'json', '~> 1.8.0'
+gem 'thread', '~> 0.0.8'
+gem 'logger', '~> 1.2.8'
+gem 'thin', '~> 1.5.1'
+gem 'i18n', '~>  0.6.4'
+
+#################################################################
+
+gem 'hashie'
+
+gem 'activesupport', '~> 3.1.1', require: 'active_support'
+
+# redis
+gem 'redis', '~> 3.0.4'
+gem 'redis-namespace', '~> 1.3.0'
+
+# protogen
+gem 'redis-lock', '~> 0.1.0' # needed for protogen
+gem 'msgpack', '~> 0.4.7 ' # needed for protogen
+
+# scheduler
+gem 'whenever', '~> 0.8.2', :require => false
+gem 'rufus-scheduler'
+
+#################################################################
