Fix unclosed html balise.

--- a/web_shell/local_cloud_config/views/projects.erb
+++ b/web_shell/local_cloud_config/views/projects.erb
@@ -318,6 +318,7 @@
               <form action='<%= "/agents/#{agent_name}/start" %>' method="post">
                 <button class="btn btn-danger">Unmounted</button>
             <% end %>
+              </form>
             </td>
 
           <% if is_cron_tasks_visible == 'true' %>
