Correct some typos/sentences in the documentation.

--- a/web_shell/local_cloud_config/views/projects.erb
+++ b/web_shell/local_cloud_config/views/projects.erb
@@ -13,7 +13,7 @@
   <div class="modal-body">
     <p>
       This is the first time this vm is launched.<br>
-      I strongly recommend you to have a look at the documentation.
+      I strongly recommend that you have a look at the documentation.
     </p>
   </div>
   <div class="modal-footer">
@@ -90,11 +90,11 @@
   <div class="well row">
      <p>
       <b>REMINDER:</b><br/>
-      Remember to click on button <b>'reboot ruby agent sdk server'</b> after start or stop agents to be taken in concideration.<br/><br/>
+      Remember to click on the button <b>'reboot ruby agent sdk server'</b> after having modified an agent to take changes into consideration.<br/><br/>
 
-      <b>How to check if reboot went ok :</b><br/>
-      If the ruby parsing went ok, you will have a <b>'ruby-agent-sdk-server ready !'</b> message into the  <a href="/logSdkAgentsPunk">Traffic log tab</a>
-      If not, look for errors into the  <a href="/logSdk">SDK Server Log tab</a> (daemon_server.log).<br/>
+      <b>How to check if reboot went ok:</b><br/>
+      If the ruby parsing went ok, you will have a <b>'ruby-agent-sdk-server ready !'</b> message in the  <a href="/logSdkAgentsPunk">Traffic log tab</a>
+      If not, look for errors into the  <a href="/logSdk">SDK Server log tab</a> (daemon_server.log).<br/>
     </p>
   </div>
   <br/>
