Move reboot bouton to the main top bar.

--- a/web_shell/local_cloud_config/views/layout.erb
+++ b/web_shell/local_cloud_config/views/layout.erb
@@ -61,6 +61,23 @@
               <a href="./patch_note"><i class="icon-book icon-white"></i> Patch notes</a>
             </li>
           </ul>
+
+          <ul class="nav pull-right">
+            <li class="" style="height:40px">
+              <form action="/restart_server" method="get" class="form-inline">
+                  <input name="reset_logs" type="hidden" value="on">
+
+                  <input name="redirect_to" type="hidden"
+                  <% if @active_tab=='projects'%>value="/projects"<% end %>
+                  <% if @active_tab=='logSdkAgentsPunk'%>value="/logSdkAgentsPunk#endlog"<% end %>
+                  <% if @active_tab=='doc'%>value="/doc"<% end %>
+                  <% if @active_tab=='patch_note'%>value="/patch_note"<% end %>
+                  >
+
+                <button class="btn btn-primary">reboot ruby agent sdk server</button>
+              </form>
+            </li>
+          </ul>
         </div>
       </div>
     </div>
