--- a/web_shell/local_cloud_config/views/logSdkAgentsPunk.erb
+++ b/web_shell/local_cloud_config/views/logSdkAgentsPunk.erb
@@ -110,9 +110,9 @@
 
   </div>
 
-  <div class="span8" style="overflow:auto;">
+  <div class="span8">
     <small>
-      <div id="view_code" class="" data-spy="affix" data-offset-top="40" style="width:800px;height:700px">
+      <div id="view_code" class="" data-spy="affix" data-offset-top="40" style="width:800px;height:700px;overflow-y: scroll">
         <i class="icon-arrow-left"></i><em> Click on buttons for details.</em>
       </div>
     </small>
