Add font-awesome to bootstrap.

--- a/web_shell/local_cloud_config/views/layout.erb
+++ b/web_shell/local_cloud_config/views/layout.erb
@@ -17,6 +17,8 @@
   <!-- Highlight in documentation -->
   <link href="/css/railcast.css" rel="stylesheet" media="screen">
   <link href="/css/bootstrap-responsive.min.css" rel="stylesheet">
+  <!-- font awsome -->
+  <link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css">
 
   <script src="http://code.jquery.com/jquery.js"></script>
   <script src="/js/highlight.js"></script>
