--- a/web_shell/local_cloud_config/views/layout.erb
+++ b/web_shell/local_cloud_config/views/layout.erb
@@ -11,12 +11,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Bootstrap -->
-  <link href="/css/bootstrap.min.css" rel="stylesheet" media="screen">
-  <link href="/css/server_admin.css" rel="stylesheet" media="screen">
+  <link rel="stylesheet" href="/css/bootstrap.min.css" media="screen">
+  <link rel="stylesheet" href="/css/server_admin.css" media="screen">
 
   <!-- Highlight in documentation -->
-  <link href="/css/railcast.css" rel="stylesheet" media="screen">
-  <link href="/css/bootstrap-responsive.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="/css/railcast.css" media="screen">
+  <link rel="stylesheet" href="/css/bootstrap-responsive.min.css">
+
   <!-- font awsome -->
   <link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css">
 
