Change log tab icon to medic.

--- a/web_shell/local_cloud_config/views/layout.erb
+++ b/web_shell/local_cloud_config/views/layout.erb
@@ -55,7 +55,7 @@
               <a href="./projects"><i class="icon-th-large icon-white"></i> SDK Agents</a>
             </li>
             <li class="<% if @active_tab=='logSdkAgentsPunk'%><%= 'active' %><% end %>">
-              <a href="./logSdkAgentsPunk#endlog"><i class="icon-retweet icon-white"></i> Server Log</a>
+              <a href="./logSdkAgentsPunk#endlog"><i class="icon-medkit icon-white"></i> Server Log</a>
             </li>
             <li class="<% if @active_tab=='doc'%><%= 'active' %><% end %>">
               <a href="./doc"><i class="icon-book icon-white"></i> Documentation</a>
