--- a/web_shell/local_cloud_config/views/layout.erb
+++ b/web_shell/local_cloud_config/views/layout.erb
@@ -77,7 +77,12 @@
                 <% if @active_tab=='patch_note'%>value="/patch_note"<% end %>
                 >
 
-                <button class="btn btn-primary">reboot ruby agent sdk server</button>
+                <% if PUNK.is_ruby_server_running %>
+                  <button class="btn btn-primary"><i class="icon-off large icon-white icon-large icon-spin"> </i> - reboot ruby server</button>
+                <% else %>
+                  <button class="btn btn-primary"><i class="icon-off large icon-white icon-large"> </i> - start ruby server</button>
+                <% end %>
+
               </form>
             </li>
           </ul>
