--- a/web_shell/local_cloud_config/views/projects.erb
+++ b/web_shell/local_cloud_config/views/projects.erb
@@ -90,7 +90,7 @@
   <div class="well row">
      <p>
       <b>REMINDER:</b><br/>
-      Remember to click on the button <b>'reboot ruby agent sdk server'</b> after having modified an agent to take changes into consideration.<br/><br/>
+      Remember to click on the button <b>'reboot ruby server'</b> in the top bar after having modified an agent to take changes into consideration.<br/><br/>
 
       <b>How to check if reboot went ok:</b><br/>
       If the ruby parsing went ok, you will have a <b>'ruby-agent-sdk-server ready !'</b> message in the  <a href="/logSdkAgentsPunk">Traffic log tab</a>
