Add drop in PUNK.

--- a/web_shell/local_cloud_config/views/logSdkAgentsPunk.erb
+++ b/web_shell/local_cloud_config/views/logSdkAgentsPunk.erb
@@ -108,6 +108,10 @@
       </textarea>
     <% end %>
 
+    <% if PUNK.gen_loading_action != nil %>
+      <i class="icon-spinner icon-spin icon-2x"></i> <%= PUNK.gen_loading_action %>
+    <% end %>
+
   </div>
 
   <div class="span8">
